# procont-ex

./: .gdbinit  .gitignore  .gitmodules  BUGS  BUGS.editor-st  BUGS.fbd-translator  BUGS.st-editor  BUGS.translator  CMakeLists.txt  Config0.h  PROCONT-EX-startup.sh  PROCONT-EX.service.in  README.md  README.procont-ex  ReadMe.txt  Remote debug.txt  TODO  client.cpp  custom_layer.h  drivers_config.json  drivers_config.json.rev  glue_generator  hardware_layer.cpp  interactive_server.cpp  ladder.h  main.cpp  main.cpp.prev  modbus.cpp  modbus_master.cpp  modules_config.json  persistent_storage.cpp  procont-environment.in  server.cpp  utils.cpp  zmq.properties
libs/factory/: CMakeLists.txt  driver_factory.cpp
src/common/threads/: CMakeLists.txt  PoolClient.cpp  PoolClient.h  PoolThread.cpp  PoolThread.h  ThreadPool.cpp  ThreadPool.h  ThreadSafe.cpp  ThreadSafe.h  WorkThread.cpp  WorkThread.h
src/factory/: CMakeLists.txt  address.cpp  driver_factory.cpp
src/procont-app-conf/: CMakeLists.txt
src/procont-app-conf/dialog/: AddDUTDialog.cpp  AddDUTDialog.h  AddDeviceDialog.cpp  AddDeviceDialog.h  AddPOUDialog.cpp  AddPOUDialog.h  AddPOUDialog.ui  AddTypeDialog.cpp  AddTypeDialog.h  AddTypeDialog.ui  InputAssistantDialog.cpp  InputAssistantDialog.h  InputAssistantDialog.ui  InputDialog.cpp  InputDialog.h  RenameDialog.cpp  RenameDialog.h
src/procont-app-conf/editor-st/: ArraySt.cpp  ArraySt.h  CodeEditor.cpp  CodeEditorWidget.cpp  CodeEditorWidget.h  CommonStTypes.h  DataType.cpp  DataType.h  FilesManager.h  LineNumberArea.cpp  POU.cpp  POU.h  StructSt.h  Variable.h  XmlParser.cpp  XmlParser.h  code_editor.cpp  code_editor.h  editor-st.qrc  filesmanager.cpp  highlighter.cpp  line_number_area.cpp  line_number_area.h  xmlparser.cpp  xmlparser.h
src/procont-app-conf/editor-st/resources/: types.txt  wordlist.txt
src/procont-app-conf/editor/fbd/: README.md  README_BACKUP_66167.md  TODO.md  connecting_rules.md
src/procont-app-conf/editor/st/: ArraySt.h  CodeEditor.cpp  CodeEditor.h  CodeEditorWidget.cpp  CodeEditorWidget.h  CommonStTypes.h  DataType.h  FilesManager.cpp  Highlighter.cpp  Highlighter.h  LineNumberArea.h  POU.h  Variable.h  XmlParser.cpp
src/procont-app-conf/generate/: Compiler.cpp  Compiler.h  Translator.cpp  Translator.h
src/procont-app-conf/iec/: Library.cpp  Library.h  StandardLibrary.cpp  StandardLibrary.h
src/procont-app-conf/item/: DomItem.cpp  DomItem.h  ItemValue.cpp  ItemValue.h  ItemValueCreator.cpp  ItemValueCreator.h  ItemValueVariableTable.cpp  ItemValueVariableTable.h
src/procont-app-conf/log/: Logger.cpp  Logger.h  Message.cpp  Message.h
src/procont-app-conf/main/: MainApp.cpp  MainWindow.cpp  MainWindow.h  Settings.h
src/procont-app-conf/model/: DomModel.cpp  DomModel.h  ProxyModel.cpp  ProxyModel.h
src/procont-app-conf/resource/: procont-app-conf.qrc
src/procont-app-conf/resource/lib/: StandardFunctionBlocks.xml  StandardIECFunctions.xml
src/procont-app-conf/resource/proj/: plc-1.1.xml  plc-1.xml  plc-e.xml
src/procont-app-conf/resources/: procont-app-conf.qrc
src/procont-app-conf/resources/lib/: StandardFunctionBlocks.xml  StandardIECFunctions.xml  StandardLibrary.xml
src/procont-app-conf/resources/proj/: plc-e.xml
src/procont-app-conf/tr/: procont-app-conf_ru_RU.ts  translation.cpp  translation.h
src/procont-app-conf/translator/: GlobalType.h  SchemaViewer.cpp  SchemaViewer.h  TranslatorFbd.cpp  TranslatorFbd.h  TranslatorIL.cpp  TranslatorIec.cpp  TranslatorIec.h  TranslatorLD.cpp  TranslatorLD.h  TranslatorST.cpp  TranslatorST.h  TranslatorSfc.cpp  TranslatorSfc.h  XmlParser.cpp  XmlParser.h
src/procont-app-conf/translator-fbd/: FbdTranslator.cpp  FbdTranslator.h  GlobalType.h  SchemaViewer.cpp  SchemaViewer.h  XmlParser.cpp  XmlParser.h
src/procont-app-conf/undo/: cundocommand_edit.cpp  cundocommand_edit.h  cundocommand_insert.cpp  cundocommand_insert.h  cundocommand_insert_table.cpp  cundocommand_insert_table.h  cundocommand_insert_tree.cpp  cundocommand_insert_tree.h  cundocommand_remove.cpp  cundocommand_remove.h  cundocommand_remove_table.cpp  cundocommand_remove_table.h  cundocommand_remove_tree.cpp  cundocommand_remove_tree.h  iundocommand.cpp  iundocommand.h
src/procont-app-conf/view/: ItemDelegate.cpp  ItemDelegate.h  ItemDelegate_combobox.cpp  Section.cpp  Section.h  SpinBoxMultiRange.cpp  TableView.cpp  TableView.h  TreeView.cpp  TreeView.h
src/procont-app-conf/widget/: TabWidgetEditor.cpp  TabWidgetEditor.h  TabWidgetProtocol.cpp  TabWidgetProtocol.h  TabWidgetTree.cpp  TabWidgetTree.h  WidgetCodeEditor.cpp  WidgetCodeEditor.h  WidgetEditor.cpp  WidgetEditor.h  WidgetEditor_fbd.cpp  WidgetEditor_fbd.h  WidgetEditor_inherit.cpp  WidgetEditor_inherit.h  WidgetSettings.cpp  WidgetSettings.h
src/procont-ex/: CMakeLists.txt  Config0.c  LOCATED_VARIABLES_ALL.h  POUS.c  POUS.h  README.md  Res0.c  VARIABLES.csv  client.cpp  debug.cpp  enip.cpp  glue_generator.out  interactive_server.cpp  ladder.h  main.cpp  pccc.cpp  persistent_storage.cpp  utils.cpp
src/procont-ex/cmake/: AMBI-gettext.cmake  AMBI-options.cmake  README-libfind.md  build-modbus.cmake  iec_build.cmake
src/procont-ex/cmake/find/: FindMySQL.cmake  (+3 more)
src/procont-ex/lib/: accessor.h.new  iec_std_lib.h  iec_types.h  iec_types_all.h
utils/Gateway/: CMakeLists.txt  libpro-gateway.pc.in  package.json  pro-gateway-version.h.in
utils/Gateway/src/: VARIANT.h  address.cpp  address.h  binder.cpp  binder.h  binding.cpp  binding.h  bitwise.h  client.cpp  client.h  config_loader.h  driver_factory.cpp  driver_factory.h  driver_manager.cpp  dto.h  gate.cpp  gate.h  gate_config.cpp  gate_config.h  gateway.cpp  gateway.h  global.cpp  global.h  iec_factory.h  igate.h  ikeyholder.h  iserver.h  on_data_change.h  processor.h  proxy.cpp  proxy.h  reg.h  reg_client.cpp  reg_client.h  reg_server.cpp  reg_server.h  registers.h  registry.cpp  registry.h  server.cpp  (+6 more)
utils/glue_generator/: CMakeLists.txt  glue_generator.cpp  glue_generator_new.cpp
utils/glue_generator/test/: catch.hpp  glue_generator_test.cpp
utils/glue_generator/tmp/: glue_generator
(+1055 files in other folders)
